Nou alles werkt in de basis zoals het zou moeten. Mss nog een export en een melding functie..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Learn"
         tools:targetApi="31">
         <activity
-            android:name=".SecondActivity"></activity>
+            android:name=".PushUps"
+            android:exported="false" />
+        <activity android:name=".subMenuB" />
+        <activity android:name=".WeekOverviewActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
